@@ -1982,9 +1982,6 @@ BATH=What you need to do if you start stinking.  If you can't find a bathtub, \
 just hop in a river or shallow water.  Enter the social BATHE and the \
 grime will begin to disappear.  Even treading water will make you cleaner.
 
-LASSO=Lassos can be wielded and thrown at a target to bind them, and then \
-UNTIEd to release them.
-
 BATHE=BATH
 
 CLEAN=BATH
