@@ -2950,6 +2950,16 @@ Not all traps may be set on all items, however.  Traps are \
 temporary, but reset if sprung after a time.  Setting the \
 same trap on the same object will reset the trap early.
 
+LASSO=SKILL_LASSOING
+LASSOING=SKILL_LASSOING
+SKILL_LASSOING=<ABILITY>\
+Usage    : LASSO [TARGET NAME]\n\r\
+Example  : lasso Sophie\n\r\
+If the player has a suitable rope, this will attempt to throw the rope \
+at the target and, if hit, will bind the target for a short period. \
+This will not start combat with animals on private property.  The \
+ropes can be manually untied with the GET command.  
+
 LEECHING=SKILL_LEECHING
 SKILL_LEECHING=<ABILITY>\
 Usage    : LEECHING [TARGET NAME]\n\r\
